<resources>
    <string name="app_name">JanuraryChat</string>
    <string name="forgot_password">忘记密码</string>
    <string name="new_user">新用户</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="code">短信验证码</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="confirm_password">确认密码</string>
    <string name="prompt">提示</string>
    <string name="search">搜索</string>
    <string name="nofriends">暂无好友</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="start_chat">发起会话</string>
    <string name="start_voice">语音通话</string>
    <string name="start_video">视频聊天</string>
    <string name="public_service">公众号</string>
    <string name="fr_chat_room_one">聊天室 I</string>
    <string name="fr_chat_room_two">聊天室 II</string>
    <string name="fr_chat_room_three">聊天室 III</string>
    <string name="fr_chat_room_four">聊天室 IV</string>
    <string name="fr_chat_room_join_failure">加入聊天室失败</string>
    <string name="seal_mine_fragment_user_portrait">用户头像</string>
    <string name="mine_setting">账号设置</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mine_service">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="mine_about">关于 SealTalk</string>



    <string name="contact_notification_someone_agree_your_request">%1$s已同意你的好友请求</string>
    <string name="contact_notification_agree_your_request">对方已同意你的好友请求</string>
    <string name="setdisplayname">设置备注</string>
    <string name="add_friend">加为好友</string>
    <string name="fr_chat_room">聊天室</string>

    <string name="de_dialog_item_message_delete">删除消息</string>

    <string name="Illegal_phone_number">非法手机号</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>
    <string name="not_send_code">未向服务端获取验证码</string>
    <string name="get_code">重新获取验证码</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="chat">会话</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="des_add_friend_to_black_list">你将不再收到对方的消息</string>
    <string name="No_friends">暂无好友</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="black_state">黑名单状态</string>


    <string name="other_devices_text">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="i_know">知道了</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="layout_dialog_loading">正在加载</string>
</resources>
