<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    android:orientation="vertical">

    <com.ccy.janurarychat.server.widget.ClearWriteEditText
        android:id="@+id/forget_phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:hint="@string/phone_number"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/de_title_bg" />

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/forget_phone"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <com.ccy.janurarychat.server.widget.ClearWriteEditText
            android:id="@+id/forget_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="6"
            android:drawableLeft="@drawable/ic_code"
            android:drawablePadding="5dp"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/de_title_bg" />


        <Button
            android:id="@+id/forget_getcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="4"
            android:background="@drawable/rs_select_btn_gray"
            android:clickable="false"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/send_code"
            android:textColor="#FFF"
            android:textSize="12sp" />

    </LinearLayout>

    <com.ccy.janurarychat.server.widget.ClearWriteEditText
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/message"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dip"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textColor="@color/de_title_bg" />

    <com.ccy.janurarychat.server.widget.ClearWriteEditText
        android:id="@+id/forget_password1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/forget_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/de_title_bg" />

    <Button
        android:id="@+id/forget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rs_select_btn_gray"
        android:clickable="false"
        android:text="@string/confirm"
        android:textColor="#FFF" />

</RelativeLayout>