<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:background="@drawable/de_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/de_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/de_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="91dp"
            android:src="@drawable/index_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <com.ccy.janurarychat.server.widget.ClearWriteEditText
                    android:id="@+id/de_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <FrameLayout
                    android:id="@+id/fr_username_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_phone"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <com.ccy.janurarychat.server.widget.ClearWriteEditText
                    android:id="@+id/de_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <FrameLayout
                    android:id="@+id/fr_pass_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_password"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/de_login_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="34dp"
                android:background="@drawable/rs_select_btn_blue"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/de_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:text="@string/forgot_password"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="PrettyAli"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/de_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="16dp"
        android:text="@string/new_user"
        android:textColor="#999999"
        android:textSize="14sp" />

</RelativeLayout>
